--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -1422,6 +1422,47 @@ body.fullscreen #taskToolbar {
   cursor: pointer;
   font-size: 14px;
 }
+
+/************************
+  DISPLAY SUCCESS MESSAGES
+*************************/
+.successMessage {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 11px 0;
+  background-color: #8bbb0a;
+  color: #fff;
+  font-weight: bold;
+  z-index: 1;
+  border-radius: 5px 5px 0 0;
+}
+@media /* Mobiles */
+  screen and (max-width: 767.9px) and (orientation: portrait),
+  screen and (min-width: 480px) and (max-width: 854.9px) and (orientation: landscape),
+  screen and (min-width: 480px) and (max-height: 449.9px) and (orientation: landscape) {
+  .successMessage {
+    box-shadow: 0px 0px 0 2px #fff;
+  }
+}
+.successMessage .messageWrapper {
+  margin: 0 10px;
+  font-size: 75%;
+}
+
+.successMessage .btn {
+  background-color: #669900;
+  border: none;
+  box-shadow: none;
+  border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+  margin-left: 10px;
+  padding: 2px 10px;
+}
+
+
 .modalWrapper {
   display: none;
   z-index: 1000;
