--- a/pemFioi/taskVideo/player.css
+++ b/pemFioi/taskVideo/player.css
@@ -2,10 +2,16 @@
     margin: 20px 0;
 }
 
-.task-video .player-fixed {
-    position: fixed;
-    left: 0;
-    top: 0;
+.task-video .task-video-content {
+    overflow: hidden;
+    position: relative;
+    zoom: 1;
+    background: transparent;
+    transition: box-shadow 0.2s ease-in-out, background 0.2s ease-in-out;
+}
+
+.task-video .sections {
+    overflow-y: scroll;
 }
 
 .task-video .sections .section {
@@ -37,6 +43,10 @@
     cursor: pointer;
 }
 
+.task-video .time-link:hover {
+    text-decoration: underline;
+}
+
 .task-video .sections .viewed .title:after {
     content: '';
     display: inline-block;
@@ -53,26 +63,38 @@
 }
 
 
-@media (max-width: 1024px) {
-    .task-video .player-fixed {
-        width: 100%;
-    }
+
+
+.task-video .fixed-content {
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.66);
+    -moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.66);
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.66);
 }
 
 
-@media (min-width: 1024px) {
+.task-video-wide-mode .player {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+}
 
-    .task-video .player-wrapper {
-        float: left;
-        width: 50%;
-    }
+.task-video-wide-mode .sections {
+    position: absolute;
+    height: 100%;
+    right: 0;
+    top: 0;
+}
 
-    .task-video .player-fixed {
-        width: 50%;
-    }
+.task-video-narrow-mode .player {
+    width: 100%;
+}
 
-    .task-video .sections {
-        margin-left: 50%;
-    }
-
+.task-video-narrow-mode .sections {
+    width: 100%;
 }
