When users select a table to view it directly use a dark blue background

--- a/pemFioi/database/styles.css
+++ b/pemFioi/database/styles.css
@@ -46,6 +46,16 @@
 }
 
 
+.highlight-result table,
+.highlight-result th,
+.highlight-result td {
+    border-color: #999;
+    color: #FFF;
+    background: #336;
+}
+
+
+
 /* console renderer */
 .console {
     width: auto;
