--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -14,6 +14,16 @@ body, select {
   font-family: 'Titillium Web', Arial, Helvetica, sans-serif;
   color: #9b9b9b;
 }
+
+code { 
+  padding: 2px 4px;
+  font-size: 90%;
+  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+  color: #a91c66;
+  background-color:#f9f2f6;
+  border-radius: 4px;
+}
+
 @media screen and (min-width: 1024px) {
   body, select {
     font-size: 16px;
