--- a/pemFioi/quiz/quizStyles-0.1.css
+++ b/pemFioi/quiz/quizStyles-0.1.css
@@ -46,17 +46,17 @@ question:nth-child(odd) {
 }
 */
 
-question .error-message {
+question .error-message, .quiz-toolbar .error-message {
   color: #ff001f;
   background-color: #ffe5e8;
-  margin-top: 10px;
   border-radius: 50px 0 0 50px;
   padding: 7px 8px 7px 40px;
   position: relative;
   font-size: 14px;
-  margin: 0 60px;
+  margin: 10px 60px;
 }
-question .error-message .icon {
+question .error-message .icon,
+.quiz-toolbar .error-message .icon {
   color: #fff;
   background-color: #ff001f;
   padding: 5px 6px;
