--- a/pemFioi/components/earth3d/test.html
+++ b/pemFioi/components/earth3d/test.html
@@ -35,6 +35,10 @@
 	<script>
 		var earth = Earth3D({
 			parent: document.getElementById('view'),
+			target: {
+				lat: 54.326967,
+				lng: 48.4237641
+			},
 			camera: {
 				lat: 30,
 				lng: 30
@@ -59,7 +63,7 @@
 				getValue('opacity', 0, 100) / 100
 			);
 		}
-		refresh();
+		//refresh();
 		
 		document.getElementById('refresh').addEventListener('click', refresh, false);
 	</script>
