--- a/pemFioi/components/earth3d/test.html
+++ b/pemFioi/components/earth3d/test.html
@@ -63,7 +63,7 @@
 				getValue('opacity', 0, 100) / 100
 			);
 		}
-		//refresh();
+		refresh();
 		
 		document.getElementById('refresh').addEventListener('click', refresh, false);
 	</script>
