--- a/pemFioi/components/earth3d/test.html
+++ b/pemFioi/components/earth3d/test.html
@@ -5,10 +5,15 @@
 	<title>zen3d - earth</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<style>
+		#controls {
+			width: 50%;
+		}		
 		#view {
-			width: 400px;
-			height: 400px;
-			background: #ffffff;
+			position: fixed;
+			top: 0;
+			right: 0;
+			width: 50%;
+			height: 100%;
 		}
 	</style>
 	<script src="../../../ext/zen3d/zen3d.js"></script>
@@ -17,48 +22,68 @@
 	<script src="earth3d.js"></script>
 </head>
 <body>
-	<div>
-		<label>Lat: </label>
-		<input type="text" id="lat" value="45"/>
+	<div id="controls">
+		<div>
+			<label>Lat: </label>
+			<input type="text" id="lat" value="45"/>
+		</div>
+		<div>
+			<label>Lng: </label>
+			<input type="text" id="lng" value="45"/>
+		</div>	
+		<button onclick="setLatLng()">Update</button>		
+		<hr/>
+
+		<div>
+			<label>Opacity: </label>
+			<input type="text" id="opacity" value="50"/>
+		</div>		
+		<button onclick="setOpacity()">Update</button>		
+		<hr/>
+
+		<div>
+			<label>Rotation angle: </label>
+			<input type="text" id="rotation-angle" value="0"/>
+		</div>		
+		<button onclick="updateRotation()">Update</button>		
+		<hr/>		
+
+		<strong>mouseover coordinates</strong>
+		<div id="coordinates"></div>			
 	</div>
-	<div>
-		<label>Lng: </label>
-		<input type="text" id="lng" value="45"/>
-	</div>	
-	<div>
-		<label>Opacity: </label>
-		<input type="text" id="opacity" value="50"/>
-	</div>		
-	<button id="refresh">Refresh</button>
+
 	
 	<div id="view"></div>	
-	<div id="coordinates"></div>			
-
-	<script>
-		function showCoordinates(point) {
-			document.getElementById('coordinates').innerHTML = 'Lat: ' + point.lat + ' Lng: ' + point.lng;
-		}
 	
 
-		function refresh() {
-			function getValue(id, min, max) {
-				var el = document.getElementById(id);
-				var v = Math.floor(el.value) || 0;
-				v = Math.min(v, max);
-				v = Math.max(v, min);
-				el.value = v;
-				return v;
-			}
+	<script>
+		function getValue(id, min, max) {
+			var el = document.getElementById(id);
+			var v = Math.floor(el.value) || 0;
+			v = Math.min(v, max);
+			v = Math.max(v, min);
+			el.value = v;
+			return v;
+		}
+
+		function updateCursor() {
 			earth.setCursor({
 				lat: getValue('lat', -90, 90), 
 				lng: getValue('lng', -180, 180)
 			});
+		}
+
+		function updateOpacity() {
 			earth.setOpacity(
 				getValue('opacity', 0, 100) / 100
 			);
 		}
-		document.getElementById('refresh').addEventListener('click', refresh, false);
 
+		function updateRotation() {
+			earth.setRotation(
+				Math.PI * getValue('rotation-angle', -Infinity, Infinity) / 180
+			);			
+		}
 
 		var earth = Earth3D({
 			parent: document.getElementById('view'),
@@ -98,8 +123,18 @@
 			},
 			// all evens are optional
 			events: {
-				onLoad: refresh,
-				onMouseMove: showCoordinates
+				onLoad: function() {
+					updateCursor();
+					updateOpacity();
+					updateRotation();					
+				},
+				onMouseMove: function(point) {
+					var lat_postfix = (lat < 0) ? 'S' : 'N';
+					var lng_postfix = (lng < 0) ? 'W' : 'E';
+					document.getElementById('coordinates').innerHTML = 
+						'Lat: ' + point.lat + lat_postfix +
+						' Lng: ' + point.lng + lng_postfix;
+				}
 			}
 		});		
 	</script>
