--- a/pemFioi/components/earth3d/test.html
+++ b/pemFioi/components/earth3d/test.html
@@ -31,14 +31,14 @@
 			<label>Lng: </label>
 			<input type="text" id="lng" value="45"/>
 		</div>	
-		<button onclick="setLatLng()">Update</button>		
+		<button onclick="updateCursor()">Update</button>		
 		<hr/>
 
 		<div>
 			<label>Opacity: </label>
 			<input type="text" id="opacity" value="50"/>
 		</div>		
-		<button onclick="setOpacity()">Update</button>		
+		<button onclick="updateOpacity()">Update</button>		
 		<hr/>
 
 		<div>
